
  http://hg.viff.dk/viff/log/

The issue numbers referenced below refer to the online issue tracker,
please refer to it for details on the issues:

  http://tracker.viff.dk/


Version ?, not yet released
---------------------------

The Runtime class has been split into several parts and two new mixin
classes provide different comparison protocols. Several coercion
problems were fixed.

Details:

* Issue 2: Split Runtime class into smaller parts.

* Issue 7: New system for unit tests.

* Better coercion. The comparison in Toft07Runtime can now correctly
  deal with arguments of mixed types, e.g., comparisons like "100 < x"
  where x is a Share.

* The coercion done by the xor method was also fixed.


Version 0.4, released on 2008-03-12
-----------------------------------

Implemented a reliable Bracha broadcast which is secure against active
adversaries. Shamir sharings, pseudo-random as well as standard, can
now be asymmetric which means that only a subset of the parties
provide input. The open protocol is now also asymmetric, in the sense
that only a subset of the parties receive the opened result. The
behavior of field elements in Boolean expressions has been fixed. This
means that "GF256(0) and GF256(1)" now returns GF256(0) instead of
GF256(1). Added a modern implementation of the classic Yao
millionaires example from 1982 which started this field of research.

Details:

* Bracha broadcast, which is a reliable broadcast mechanism against
  active adversaries, has been implemented. Secure broadcast is a
  building block that is often used in active security scenarios.

* Asymmetric Shamir sharing. It is now possible to specify that just a
  subset of the players should provide input to a Shamir sharing. This
  change is not backwards compatible with version 0.3 or earlier.
  Adapting old programs is easy, simply change:

    a, b, c = rt.shamir_share(Zp(input))

  to

    a, b, c = rt.shamir_share([1, 2, 3], Zp, input)
